Fixes/Added Read More & Menu Layout
Fixed some layout issues in different sections of the website and added menu layout for mobile.

--- a/restaurant-app/src/App.css
+++ b/restaurant-app/src/App.css
@@ -36,7 +36,6 @@
 }
 
 .nav-bar {
-  position: relative;
   z-index: 1;
   display: none;
   background-color: rgba(22, 22, 21, 0.5);
@@ -48,12 +47,20 @@
 .show-nav {
   display: flex;
   justify-content: center;
-  height: 900px;
+  height: 100vh;
+}
+
+.show-nav {
+  display: flex;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .page-hero {
   position: relative;
-  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url("./images/top_section_bg.png");
   background-size: cover;
   background-position: center;
@@ -104,17 +111,56 @@
 main {
   display: grid;
   grid-template:
-    minmax(950px, 1300px)
-    minmax(1000px, 1300px)
-    minmax(800px, 1150px)
-    minmax(950px, 1300px)
+    repeat(4, auto)
     / minmax(375px, 100vw);
+}
+
+.section-title {
+  font-size: 2rem;
+}
+
+.section-title > span {
+  font-size: 2.4rem;
+  font-weight: 400;
+}
+
+.menu-top > .section-title {
+  color: #f9f6ee;
+}
+
+.about-top,
+.about-bottom {
+  position: relative;
+  z-index: 0;
+}
+
+.corner-box {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+  background-color: transparent;
+}
+
+.bottom-right {
+  border-bottom: 1px solid #161615;
+  border-right: 1px solid #161615;
+  bottom: -30px;
+  right: -20px;
+}
+
+.top-left {
+  border-top: 1px solid #161615;
+  border-left: 1px solid #161615;
+  top: -30px;
+  left: -20px;
 }
 
 .about-section {
   display: grid;
-  grid-template: 800px 450px/ 375px;
+  grid-template: minmax(500px, auto) 450px / minmax(375px, 768px);
   justify-content: center;
+  gap: 50px;
+  margin: 50px 0;
 }
 .about-section > section {
   padding: 50px 40px;
@@ -129,28 +175,57 @@ main {
   background-size: 325px;
   background-repeat: no-repeat;
   background-position: top center;
-  position: relative;
   width: 100%;
 }
-
-.about-image {
-  position: absolute;
-  top: 0;
-  transform: scale(0.5);
-}
-
-.about-title {
-  font-size: 2rem;
-  margin-bottom: 50px;
-}
-
-.about-title > span {
-  font-weight: 400;
-}
-
 .about-description {
+  margin-top: 50px;
+}
+.about-description > div > p {
   font-size: 1.2rem;
-  margin-bottom: 40px;
+}
+
+.about-description .expanded {
+  height: auto;
+}
+
+.menu-section {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
+    url("./images/menu_section.png");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  flex-direction: column;
+  gap: 70px;
+  padding: 75px 30px;
+}
+
+.menu-middle {
+  display: grid;
+  grid-template: repeat(5, 100px) / 50px 200px 50px;
+  gap: 10px;
+  justify-content: center;
+}
+
+.menu-middle > div {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+}
+.menu-bottom {
+  display: flex;
+  justify-content: center;
+}
+
+.grid-img-1,
+.grid-img-3,
+.grid-img-5 {
+  grid-column: 1 / 3;
+}
+
+.grid-img-2,
+.grid-img-4 {
+  grid-column: 2 / 4;
 }
 
 .page-contact {
@@ -159,6 +234,7 @@ main {
   background-color: #161615;
   color: #f9f6ee;
   height: 100%;
+  justify-content: center;
 }
 
 .contact-info {
@@ -168,7 +244,7 @@ main {
   gap: 20px;
 }
 .contact-info > h1 {
-  font-size: 40px;
+  font-size: 2.5rem;
   margin-bottom: 40px;
 }
 
@@ -176,7 +252,7 @@ main {
   font-family: "Source Serif Pro", serif;
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 15px;
 }
 
 .contact-info > button {
@@ -188,6 +264,7 @@ main {
   font-size: 2rem;
   display: flex;
   gap: 15px;
+  margin-top: 20px;
 }
 
 .google-map {
@@ -225,6 +302,7 @@ main {
 }
 
 .links > a {
+  color: white;
   font-size: 20px;
 }
 
@@ -269,22 +347,89 @@ main {
     font-size: 24px;
   }
 
+  .about-section > figure {
+    background-size: 400px;
+    background-position: top center;
+  }
+
+  .social-media {
+    font-size: 3rem;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .about-section {
+    margin: 75px 0;
+    grid-template: minmax(750px, auto) / repeat(2, 700px);
+    gap: 50px;
+  }
+
+  .about-section > section {
+    display: flex;
+    justify-self: left;
+    flex-direction: column;
+    justify-content: center;
+    justify-self: center;
+    width: 600px;
+    padding: 0;
+  }
+
+  .about-section > figure {
+    justify-self: left;
+    background-size: 600px;
+    background-position: center center;
+  }
+
+  .about-title {
+    font-size: 4rem;
+  }
+
+  .about-title > span {
+    font-size: 5rem;
+  }
+
+  .about-description {
+    padding-right: 20px;
+  }
+  .top-left {
+    top: -30px;
+    left: -40px;
+  }
+
+  .read-more {
+    display: none;
+  }
+  .page-contact {
+    flex-direction: row;
+    padding: 35px;
+    align-items: center;
+  }
+
+  .contact-info > h1 {
+    font-size: 4rem;
+  }
+
+  .contact-info > p {
+    font-size: 1.5rem;
+    width: 600px;
+  }
+
+  .google-map {
+    width: 650px;
+  }
+
   .footer-items {
+    display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    width: 1200px;
+    margin: 0 auto;
   }
 
   .links {
     flex-direction: row;
     gap: 50px;
     margin: 0;
-  }
-
-  .page-contact {
-    flex-direction: row;
-  }
-  .google-map {
-    width: 650px;
   }
 }
